<resources>
    <string name="OLD_UZ_5_1">Uz.bin</string>
    <string name="Pull_To_Refresh_Pull">下拉刷新</string>
    <string name="Pull_To_Refresh_Refreshing">刷新中...</string>
    <string name="Pull_To_Refresh_Release">松开后刷新</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="auto_bd_search">Голосовой быстрый поиск</string>
    <string name="auto_bd_search_disable">Отключён</string>
    <string name="auto_bd_search_enable">Включён</string>
    <string name="bakup_settings">Бэкап настроек</string>
    <string name="candsize">Размер шрифта</string>
    <string name="clear_settings">Удалить облачный бэкап</string>
    <string name="cloud_bakup_settings">Настройки облачного бэкапа заметок</string>
    <string name="front_acgfont_access">Настройки шрифта</string>
    <string name="front_game_board">Игровая клавиатура</string>
    <string name="front_note_backup">Облачный бэкап</string>
    <string name="front_note_backup_recovery">Бэкап заметок</string>
    <string name="front_note_recovery">Восстановить из облака</string>
    <string name="front_quick_access">Плавающее окно</string>
    <string name="front_quick_note">Быстрые заметки</string>
    <string name="front_quick_notification">Панель уведомлений</string>
    <string name="land_hwRecMode">Выберите альбомный режим рукописного ввода</string>
    <string name="noti_switcher_settings">Настройки уведомлений</string>
    <string name="port_hwRecMode">Выберите портретный режим рукописного ввода</string>
    <string name="pref_key_91SYN">91SYN</string>
    <string name="pref_key_ARROWCTRL">ARROWCTRL</string>
    <string name="pref_key_BACKUPSETTINGS5_2">BACKUPSETTINGS5_2</string>
    <string name="pref_key_BHCUT">BHCUT</string>
    <string name="pref_key_BIG5">BIG5</string>
    <string name="pref_key_CANDWORDSIZE">CANDWORDSIZE</string>
    <string name="pref_key_CIKUNETWORKCLEAN">CIKUNETWORKCLEAN</string>
    <string name="pref_key_CIKUNETWORKSYN">CIKUNETWORKSYN</string>
    <string name="pref_key_CIKUPCIMPORT">CIKUPCIMPORT</string>
    <string name="pref_key_CLEARSETTINGS5_2">CLEARSETTINGS5_2</string>
    <string name="pref_key_COMMD">COMMD</string>
    <string name="pref_key_CPIDX">CPIDX</string>
    <string name="pref_key_ENSORT">ENSORT</string>
    <string name="pref_key_EXVIEW">EXVIEW</string>
    <string name="pref_key_FEEDBACK">FEEDBACK</string>
    <string name="pref_key_FLOATMODE">FLOATMODE</string>
    <string name="pref_key_HELP">HELP</string>
    <string name="pref_key_HKChooser">HKChooser</string>
    <string name="pref_key_HWLIAN">HWLIAN</string>
    <string name="pref_key_HWbrush">HWbrush</string>
    <string name="pref_key_HWcolorIdx">HWcolorIdx</string>
    <string name="pref_key_HWspeed">HWspeed</string>
    <string name="pref_key_KEYMASK">KEYMASK</string>
    <string name="pref_key_KP_TIP_SHOW">KP_TIP_SHOW</string>
    <string name="pref_key_LANGUAGE">LANGUAGE</string>
    <string name="pref_key_LandHWRecMode">LandHWRecMode</string>
    <string name="pref_key_MH0">MH0</string>
    <string name="pref_key_MH1">MH1</string>
    <string name="pref_key_MH10">MH10</string>
    <string name="pref_key_MH11">MH11</string>
    <string name="pref_key_MH12">MH12</string>
    <string name="pref_key_MH13">MH13</string>
    <string name="pref_key_MH16">MH16</string>
    <string name="pref_key_MH17">MH17</string>
    <string name="pref_key_MH18">MH18</string>
    <string name="pref_key_MH19">MH19</string>
    <string name="pref_key_MH2">MH2</string>
    <string name="pref_key_MH3">MH3</string>
    <string name="pref_key_MH4">MH4</string>
    <string name="pref_key_MH5">MH5</string>
    <string name="pref_key_MH6">MH6</string>
    <string name="pref_key_MH7">MH7</string>
    <string name="pref_key_MH8">MH8</string>
    <string name="pref_key_MH9">MH9</string>
    <string name="pref_key_MINIMODE">MINIMODE</string>
    <string name="pref_key_MIXENCH_SENTENCE">MIXENCH_SENTENCE</string>
    <string name="pref_key_MOHU">MOHU</string>
    <string name="pref_key_OPEN_SOURCE">OPEN_SOURCE</string>
    <string name="pref_key_PHRASE">PHRASE</string>
    <string name="pref_key_POPICON">POPICON</string>
    <string name="pref_key_PY26LISTFILTER">PY26LISTFILTER</string>
    <string name="pref_key_PortHWRecMode">PortHWRecMode</string>
    <string name="pref_key_RECOVERYSETTINGS5_2">RECOVERYSETTINGS5_2</string>
    <string name="pref_key_SERVICE_AGREEMENT">SERVICE_AGREEMENT</string>
    <string name="pref_key_SERVICE_PRIVACY">SERVICE_PRIVACY</string>
    <string name="pref_key_SLIDINGSETTING">SLIDINGSETTING</string>
    <string name="pref_key_SOFTINPUT">SOFTINPUT</string>
    <string name="pref_key_SPACE2LX">SPACE2LX</string>
    <string name="pref_key_T9">T9</string>
    <string name="pref_key_TRACEOPT1">TRACEOPT1</string>
    <string name="pref_key_TRACEOPT2">TRACEOPT2</string>
    <string name="pref_key_USEREXP">USEREXP</string>
    <string name="pref_key_VIBRATE">VIBRATE</string>
    <string name="pref_key_WBPY">WBPY</string>
    <string name="pref_key_YUNSHURU">YUNSHURU</string>
    <string name="pref_key_about">about</string>
    <string name="pref_key_account_manager">account_manager</string>
    <string name="pref_key_acgfont">acgfont</string>
    <string name="pref_key_addspace">addspace</string>
    <string name="pref_key_advanced_setting">advanced_setting</string>
    <string name="pref_key_auto_syn_userciku_in_wifi">auto_syn_userciku_in_wifi</string>
    <string name="pref_key_auto_voice_bd_search_switch">pref_key_auto_voice_bd_search_switch</string>
    <string name="pref_key_basic_settings_root">basic_settings_root</string>
    <string name="pref_key_cap_first_word">cap_first_word</string>
    <string name="pref_key_ci_edit">ci_edit</string>
    <string name="pref_key_ciku">ciku</string>
    <string name="pref_key_cloud_backup">cloud_backup</string>
    <string name="pref_key_cloud_backup_settings_root">cloud_backup_settings_root</string>
    <string name="pref_key_cloud_user_ciku_root">cloud_user_ciku_root</string>
    <string name="pref_key_custom_config_case_root">custom_config_case_root</string>
    <string name="pref_key_default_setting">default_setting</string>
    <string name="pref_key_en_settings_root">en_settings_root</string>
    <string name="pref_key_enable_sym26_panel">enable_sym26_panel</string>
    <string name="pref_key_expt2">expt2</string>
    <string name="pref_key_expt3">expt3</string>
    <string name="pref_key_expt4">expt4</string>
    <string name="pref_key_expt5">expt5</string>
    <string name="pref_key_float_allow_fling">float_allow_fling</string>
    <string name="pref_key_float_allow_icon">float_allow_icon</string>
    <string name="pref_key_float_allow_notification">float_allow_notification</string>
    <string name="pref_key_float_input_status_icon">float_input_status_icon</string>
    <string name="pref_key_float_note_backup">float_note_backup</string>
    <string name="pref_key_float_note_backup_recovery">float_note_backup_recovery</string>
    <string name="pref_key_float_note_recovery">float_note_recovery</string>
    <string name="pref_key_float_open_miui">float_open_miui</string>
    <string name="pref_key_float_stick_left">float_stick_left</string>
    <string name="pref_key_floatwindow">floatwindow</string>
    <string name="pref_key_front_mynotes">front_mynotes</string>
    <string name="pref_key_front_quick_note">front_quick_note</string>
    <string name="pref_key_front_quick_notification">front_quick_notification</string>
    <string name="pref_key_fuhao_files_root">fuhao_files_root</string>
    <string name="pref_key_fuyin_settings_root">fuyin_settings_root</string>
    <string name="pref_key_game_board_setting">pref_key_game_board_setting</string>
    <string name="pref_key_general_setting">general_setting</string>
    <string name="pref_key_handwrite_pinyin_annotation">HW_PINYIN_ANNOTATION</string>
    <string name="pref_key_handwriting">handwriting</string>
    <string name="pref_key_hard_keyboard">hard_keyboard</string>
    <string name="pref_key_help">help</string>
    <string name="pref_key_impt2">impt2</string>
    <string name="pref_key_impt3">impt3</string>
    <string name="pref_key_impt4">impt4</string>
    <string name="pref_key_impt5">impt5</string>
    <string name="pref_key_mix_fuzzy_settings_root">mix_fuzzy_settings_root</string>
    <string name="pref_key_mohuyin_settings_root">mohuyin_settings_root</string>
    <string name="pref_key_noti_switcher_settings">noti_switcher_settings</string>
    <string name="pref_key_phrase">phrase</string>
    <string name="pref_key_pinyin_settings_root">pinyin_settings_root</string>
    <string name="pref_key_punctuation2">pref_key_punctuation2</string>
    <string name="pref_key_reset2">reset2</string>
    <string name="pref_key_reset3">reset3</string>
    <string name="pref_key_reset4">reset4</string>
    <string name="pref_key_sentence_prediction">sentence_prediction</string>
    <string name="pref_key_showdragline">showdragline</string>
    <string name="pref_key_showhint">showhint</string>
    <string name="pref_key_showpress">showpress</string>
    <string name="pref_key_shuangpin">shuangpin</string>
    <string name="pref_key_shuangpin_case_root">shuangpin_case_root</string>
    <string name="pref_key_smart_reply">smart_reply</string>
    <string name="pref_key_smart_search_switch">smart_search_switch</string>
    <string name="pref_key_sp10diy">sp10diy</string>
    <string name="pref_key_spaceVoice">spaceVoice</string>
    <string name="pref_key_spdiy">spdiy</string>
    <string name="pref_key_spedit2">spedit2</string>
    <string name="pref_key_spedit6">spedit6</string>
    <string name="pref_key_sug_local_switch">sug_local_switch</string>
    <string name="pref_key_tiny_voice_entry_bar_switch">pref_key_tiny_voice_entry_switch</string>
    <string name="pref_key_unique_result_switch">unique_result_switch</string>
    <string name="pref_key_update">update</string>
    <string name="pref_key_virtual">virtual</string>
    <string name="pref_key_voiceBarSwitch">pref_key_voice_scene_bar_switch</string>
    <string name="pref_key_wb_code_hint">wb_code_hint</string>
    <string name="pref_key_wbmode">wbmode</string>
    <string name="pref_key_wordassco">wordassco</string>
    <string name="pref_key_yuanyin_settings_root">yuanyin_settings_root</string>
    <string name="pref_key_yuyin_settings_root">yuyin_settings_root</string>
    <string name="recovery_settings">Настройки восстановления</string>
    <string name="sentence_predict_title">Интеллектуальное предсказание</string>
    <string name="setting_root_language_input_type_setting_title">Язык и метод ввода</string>
    <string name="settings_advanced">Расширенные настройки</string>
    <string name="settings_ciku">Словарь</string>
    <string name="settings_cloud_backup">Облачный бэкап</string>
    <string name="settings_general">Общие настройки</string>
    <string name="settings_hard_keyboard">Настройки физ. клавиатуры</string>
    <string name="settings_help">Справка</string>
    <string name="settings_login">Войти в аккаунт Baidu</string>
    <string name="settings_update">Обновления</string>
    <string name="settings_virtual">Виртуальная клавиатура</string>
    <string name="smart_predict_title">Предиктивный ввод</string>
    <string name="tofriend">Посоветовать другу</string>
    <string name="vibrate">Звук и вибрация</string>
</resources>