<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:baidu="http://schemas.android.com/apk/res-auto">
    <Preference android:title="@string/setting_root_language_input_type_setting_title" android:key="@string/pref_key_LANGUAGE" />
    <Preference android:title="@string/settings_general" android:key="@string/pref_key_general_setting" />
    <Preference android:title="@string/settings_advanced" android:key="@string/pref_key_advanced_setting" />
    <Preference android:title="@string/settings_virtual" android:key="@string/pref_key_virtual" />
    <Preference android:title="@string/settings_hard_keyboard" android:key="@string/pref_key_hard_keyboard" />
    <Preference android:title="@string/settings_ciku" android:key="@string/pref_key_ciku" />
    <Preference android:title="@string/settings_cloud_backup" android:key="@string/pref_key_cloud_backup" />
    <Preference android:title="@string/settings_login" android:key="@string/pref_key_account_manager" baidu:entriesTitle="@array/login_domian_title_entries" baidu:entryTitleValues="@array/login_domian_title_entries_value" />
    <Preference android:title="@string/settings_update" android:key="@string/pref_key_update" />
    <Preference android:title="@string/settings_help" android:key="@string/pref_key_help" />
</PreferenceScreen>