<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings_virtual" android:key="@string/pref_key_virtual" baidu:canSearch="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:baidu="http://schemas.android.com/apk/res-auto">
    <Preference android:title="@string/candsize" android:key="@string/pref_key_CANDWORDSIZE" />
    <Preference android:title="@string/front_acgfont_access" android:key="@string/pref_key_acgfont" />
    <com.baidu.input.pref.CustListPref android:entries="@array/nineonesynops" android:title="Настройки скина синхронизации темы рабочего стола" android:key="@string/pref_key_91SYN" android:defaultValue="0" android:entryValues="@array/listvalue3" />
    <CheckBoxPreference android:title="Эффекты темы плавающей клавиатуры" android:key="@string/pref_key_POPICON" android:defaultValue="true" />
    <Preference android:title="Прозрачность плавающей клавиатуры" android:key="@string/pref_key_FLOATMODE" />
    <com.baidu.input.pref.CustListPref android:entries="@array/sliding" android:title="Переключение свайпом" android:key="@string/pref_key_SLIDINGSETTING" android:defaultValue="1" android:entryValues="@array/listvalue3" />
    <com.baidu.input.pref.MiniModelPref android:title="Настройки управления одной рукой" android:key="@string/pref_key_MINIMODE" />
    <CheckBoxPreference android:title="Эффект нажатия" android:key="@string/pref_key_showpress" android:defaultValue="true" />
    <CheckBoxPreference android:title="Эффект линии" android:key="@string/pref_key_showdragline" android:defaultValue="true" />
    <CheckBoxPreference android:title="Подсказка символа" android:key="@string/pref_key_showhint" android:defaultValue="true" />
    <CheckBoxPreference android:title="Дисплей ввода китайского" android:key="@string/pref_key_SOFTINPUT" android:defaultValue="true" android:summaryOn="Вверху" android:summaryOff="Внизу" />
    <Preference android:title="@string/vibrate" android:key="@string/pref_key_VIBRATE" />
    <CheckBoxPreference android:title="Пробел для выбора ассоциативных слов" android:key="@string/pref_key_SPACE2LX" android:defaultValue="false" />
    <CheckBoxPreference android:title="Функция подсказки клавиатуры Quanpin" android:key="@string/pref_key_KEYMASK" android:defaultValue="false" android:summaryOn="Когда вся клавиатура полностью написана, клавиши светятся и темнеют подсказки" />
    <CheckBoxPreference android:title="Включить 26кл. символьную клавиатуру" android:key="@string/pref_key_enable_sym26_panel" android:defaultValue="true" />
    <CheckBoxPreference android:title="Полноэкранный режим в альбомной ориентации" android:key="@string/pref_key_EXVIEW" android:defaultValue="true" />
</PreferenceScreen>