<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings_help" android:key="@string/pref_key_help" baidu:canSearch="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:baidu="http://schemas.android.com/apk/res-auto">
    <Preference android:title="反馈问题" android:key="@string/pref_key_FEEDBACK" />
    <Preference android:title="@string/tofriend" android:key="@string/pref_key_COMMD" />
    <com.baidu.input.pref.HelpPref android:title="使用说明" android:key="@string/pref_key_HELP" />
    <Preference android:title="用户体验改进计划" android:key="@string/pref_key_USEREXP" />
    <Preference android:title="服务协议" android:key="@string/pref_key_SERVICE_AGREEMENT" />
    <Preference android:title="隐私政策" android:key="@string/pref_key_SERVICE_PRIVACY" />
    <Preference android:title="开源代码许可" android:key="@string/pref_key_OPEN_SOURCE" />
    <Preference android:title="关于" android:key="@string/pref_key_about" />
</PreferenceScreen>