<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="@string/pref_key_phrase"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="Личные фразы" android:key="@string/pref_key_PHRASE" android:defaultValue="true" />
    <Preference android:title="Редактировать" android:key="@string/pref_key_ci_edit" android:dependency="PHRASE" />
    <Preference android:title="Экспортировать" android:key="@string/pref_key_expt5" android:dependency="PHRASE" />
    <Preference android:title="Импортировать" android:key="@string/pref_key_impt5" android:dependency="PHRASE" />
    <com.baidu.input.pref.CustListPref android:entries="@array/CPIDXNAME" android:title="Позиция личной фразы" android:key="@string/pref_key_CPIDX" android:dependency="PHRASE" android:defaultValue="3" android:dialogTitle="Где отображать вашу личную фразу" android:entryValues="@array/CPIDXVALUE" />
</PreferenceScreen>